sdk/libtoob/include/libtoob.h

/* ==============================================================================
 * Handoff Verification Guard
 * ==============================================================================
 * Das `.noinit` RAM enthält illegitimate Garbage-Werte, wenn das OS durch den 
 * Watchdog abgewürgt wird, ohne dass Toob-Boot involviert war. Das Lesen der 
 * ungeschützten Boot-Variablen OHNE vorherige CRC-32 Validation riskiert Boot-Loop Crashes!
 */

/**
 * @brief Validiert die Integrität der .noinit Toob-Boot Boundary (GAP-Handoff).
 * @return TOOB_OK bei validem Magic/CRC-32, TOOB_ERR_VERIFY bei Fehler.
 */
TOOB_MUST_CHECK toob_status_t toob_validate_handoff(void);
/**
 * @brief Liefert eine sichere, verifizierte "By-Value"-Kopie der Handoff-Daten.
 * 
 * @note  [Opaque validating accessor pattern]
 *        Dies ist der einzige legitime und unterstützte Zugriffspfad für das OS, 
 *        um an Boot-Handoff-Daten zu gelangen. Direkter Zugriff auf die uninitialisierte
 *        RAM-Variable (toob_handoff_state) ist gesperrt, um zu verhindern, dass das
 *        Betriebssystem korrupten RAM-Zustand liest. Die Funktion verifiziert Magic,
 *        ABI-Strukturversion und CRC32 vor dem Kopieren. Bei Validierungsfehler
 *        wird der Zielpuffer defensiv genullt und TOOB_ERR_VERIFY zurückgegeben.
 *
 * @param out_handoff Pointer auf eine vom OS allozierte Ausgabestruktur.
 * @return TOOB_OK bei Erfolg, TOOB_ERR_VERIFY wenn die Validierung fehlschlägt, TOOB_ERR_INVALID_ARG bei NULL.
 */
TOOB_MUST_CHECK toob_status_t toob_get_handoff(toob_handoff_t* out_handoff);
/* ==============================================================================
 * Primary Feature-OS API (IDE-UX & Doxygen Mappings)
 * ============================================================================== */

/**
 * @brief Bestätigt das asynchrone OTA-Update (Commit Flag).
 * 
 * @note  [GAP-07: Network Watchdog TTL]
 *        Das Feature-OS MUSS diese Funktion rufen, um ein laufendes Update 
 *        als erfolgreich zu flaggen. Nutzt das Update ein Cloud-Handshake 
 *        (z.B. DICE/CDI), MUSS das OS zwingend die Cloud-Bestätigung abwarten. 
 *        Dafür sammelt das OS "Network-TTL" Minuten via WAL. Bei Überschreiten 
 *        dieses TTLs führt das Ausbleiben des Aufrufs unwiderruflich zum Rollback.
 * 
 * @return TOOB_OK bei Erfolg.
 *         Mögliche WAL-Fehler (erfordern OS-Handhabung):
 *         - TOOB_ERR_REQUIRES_RESET: Torn Write entdeckt. OS muss einen Reboot auslösen.
 *         - TOOB_ERR_WAL_FULL: WAL-Sektor voll. OS muss einen Reboot auslösen.
 *         - TOOB_ERR_FLASH / TOOB_ERR_FLASH_HW: Flash-Hardwarefehler.
 */
TOOB_MUST_CHECK toob_status_t toob_confirm_boot(void);
/**
 * @brief Befreit das Recovery-OS aus dem Rettungsmodus (Anti Roach-Motel).
 * @note  Sobald das Recovery-OS die App repariert hat, MUSS es diese Funktion 
 *        aufrufen, um den RECOVERY_RESOLVED Intent ins WAL zu schreiben.
 * 
 * @return TOOB_OK bei Erfolg.
 *         Mögliche WAL-Fehler (erfordern OS-Handhabung):
 *         - TOOB_ERR_REQUIRES_RESET: Sektor-Korruption. OS muss einen Reboot auslösen.
 *         - TOOB_ERR_WAL_FULL: Sektor voll. OS muss einen Reboot auslösen.
 *         - TOOB_ERR_FLASH / TOOB_ERR_FLASH_HW: Flash-Hardwarefehler.
 */
TOOB_MUST_CHECK toob_status_t toob_recovery_resolved(void);
/**
 * @brief Akkumuliert die aktive Cloud-Suchzeit (Anti-Lagerhaus Lockout).
 * @param active_search_ms Dauer der aktiven Netzwerk-Suche seit dem letzten Reset.
 * 
 * @return TOOB_OK bei Erfolg.
 *         Mögliche WAL-Fehler (erfordern OS-Handhabung):
 *         - TOOB_ERR_REQUIRES_RESET: Sektor-Korruption. OS muss einen Reboot auslösen.
 *         - TOOB_ERR_WAL_FULL: Sektor voll. OS muss einen Reboot auslösen.
 *         - TOOB_ERR_FLASH / TOOB_ERR_FLASH_HW: Flash-Hardwarefehler.
 */
TOOB_MUST_CHECK toob_status_t toob_accumulate_net_search(uint32_t active_search_ms);
/* ==============================================================================
 * Zero-Bloat Cryptography Types (must precede OTA context definition)
 * ============================================================================== */

typedef struct {
    uint8_t opaque[128]; /* Context buffer for the OS hardware crypto driver */
} toob_os_sha256_ctx_t;
 toob_ota_ctx_t;
/**
 * @brief Initializes a toob_ota_ctx_t to a clean idle state.
 *        Must be called once before first use. Securely zeroes all fields.
 * @param ctx Caller-allocated context.
 * @return TOOB_OK on success, TOOB_ERR_INVALID_ARG if ctx is NULL.
 */
TOOB_MUST_CHECK toob_status_t toob_ota_ctx_init(toob_ota_ctx_t *ctx);
/**
 * @brief Initializes the OTA Daemon for receiving a new update stream.
 * @param ctx Caller-allocated OTA session context.
 * @param total_size Expected total size of the incoming image (Manifest + Payload).
 * @return TOOB_OK on success, TOOB_ERR_INVALID_ARG if size exceeds staging slot.
 */
TOOB_MUST_CHECK toob_status_t toob_ota_begin(toob_ota_ctx_t *ctx, uint32_t total_size);
/**
 * @brief Initializes the OTA Daemon with streaming SHA-256 verification (Zero-Bloat).
 * @param ctx Caller-allocated OTA session context.
 * @param total_size Expected total size.
 * @param expected_sha256 32-byte hash to verify the stream against.
 * @return TOOB_OK on success.
 */
TOOB_MUST_CHECK toob_status_t toob_ota_begin_verified(toob_ota_ctx_t *ctx, uint32_t total_size, const uint8_t expected_sha256[32]);
/**
 * @brief Resumes a partially downloaded OTA update (unverified).
 *
 * Restores the internal write cursor and byte counter from the handoff RAM
 * checkpoint. Does NOT enable SHA-256 stream verification — use
 * toob_ota_resume_verified() if the stream must be integrity-checked.
 *
 * @param ctx Caller-allocated OTA session context.
 * @param total_size   Expected total size of the image (from the manifest).
 * @param resume_offset Output pointer for the byte offset to resume from.
 * @return TOOB_OK if resumable, TOOB_ERR_NOT_FOUND if no partial download exists.
 */
TOOB_MUST_CHECK toob_status_t toob_ota_resume(toob_ota_ctx_t *ctx, uint32_t total_size, uint32_t* resume_offset);
/**
 * @brief Resumes a partially downloaded OTA update with SHA-256 verification.
 *
 * Performs all steps of toob_ota_resume(), then reconstructs the SHA-256
 * streaming context by re-reading and re-hashing the already-staged flash
 * prefix ([CHIP_STAGING_SLOT_ABS_ADDR .. resume_offset]) via toob_os_flash_read.
 * After a successful return, toob_ota_process_chunk() will continue feeding the
 * hash, and toob_ota_finalize() will verify the full-image digest.
 *
 * @param ctx Caller-allocated OTA session context.
 * @param total_size       Expected total size of the image (from the manifest).
 * @param expected_sha256  32-byte hash to verify the complete stream against.
 * @param resume_offset    Output pointer for the byte offset to resume from.
 * @return TOOB_OK if resumable and SHA context reconstructed,
 *         TOOB_ERR_NOT_FOUND if no partial download exists,
 *         TOOB_ERR_NOT_SUPPORTED if SHA hardware init fails,
 *         TOOB_ERR_FLASH on flash read failure during re-hash.
 */
TOOB_MUST_CHECK toob_status_t toob_ota_resume_verified(toob_ota_ctx_t *ctx, uint32_t total_size,
                                       const uint8_t expected_sha256[32],
                                       uint32_t *resume_offset);
/**
 * @brief Aborts an active OTA download and securely zeroizes buffers.
 * @param ctx OTA session context to abort.
 * @return TOOB_OK.
 */
TOOB_MUST_CHECK toob_status_t toob_ota_abort(toob_ota_ctx_t *ctx);
/**
 * @brief Processes a chunk of incoming bytes, writing them linearly to Staging.
 * @param ctx OTA session context.
 * @param chunk Pointer to the downloaded bytes.
 * @param len Length of the chunk.
 * @return TOOB_OK, or TOOB_ERR_FLASH on write error.
 */
TOOB_MUST_CHECK toob_status_t toob_ota_process_chunk(toob_ota_ctx_t *ctx, const uint8_t* chunk, uint32_t len);
/**
 * @brief Finalizes the OTA process and registers the update intent in the WAL.
 *
 * After all chunks have been received and the stream transitions to DONE,
 * this function flushes residual bytes, verifies the SHA-256 digest (if
 * verified mode), and atomically writes the update intent into the WAL.
 *
 * @param ctx OTA session context.
 * @return TOOB_OK on success. The system should be rebooted immediately after.
 *         TOOB_ERR_VERIFY      — SHA-256 mismatch (stream corrupted, re-download required).
 *         TOOB_ERR_FLASH       — Flash write failed during residual flush.
 *         TOOB_ERR_WAL_LOCKED  — A previous update is already pending in the WAL.
 *                                The OS must reboot to consume it before staging a new one.
 *         TOOB_ERR_WAL_FULL    — WAL sector exhausted. Reboot required.
 *         TOOB_ERR_INVALID_ARG — Context is NULL or not in DONE state.
 */
TOOB_MUST_CHECK toob_status_t toob_ota_finalize(toob_ota_ctx_t *ctx);
/**
 * @brief Registriert ein empfangenes SUIT-Manifest im Write-Ahead-Log (WAL).
 * 
 * @note  [GAP-37: P10 WAL-Atomarität]
 *        Toob-Loader stützt sich auf absolute P10-Resilienz. Ein Crash (Brownout) 
 *        während der Ausführung dieser Funktion hinterlässt niemals einen halben
 *        Zustand! Das System evaluiert CRC-gesicherte 64-Byte WAL-Sektoren beim
 *        nächsten Boot und schließt das Update ab, oder verwirft das Rausch-Fragment.
 *
 * @param manifest_flash_addr Absolute, hardware-bündige Flash-Adresse des Manifests im SPI.
 * @return TOOB_OK bei Erfolg.
 *         Mögliche WAL-Fehler (erfordern OS-Handhabung):
 *         - TOOB_ERR_REQUIRES_RESET: Sektor-Korruption. OS muss einen Reboot auslösen.
 *         - TOOB_ERR_WAL_FULL: Sektor voll. OS muss einen Reboot auslösen.
 *         - TOOB_ERR_WAL_LOCKED: Ein anderes Update steht bereits aus.
 *         - TOOB_ERR_FLASH / TOOB_ERR_FLASH_HW: Flash-Hardwarefehler.
 */
TOOB_MUST_CHECK toob_status_t toob_set_next_update(uint32_t manifest_flash_addr);
/**
 * @brief Extrahiert die rohen Hardware-Metriken aus dem .noinit RAM.
 * 
 * @note  [CRA Regulatorik & CBOR Extraktion]
 *        Liest die `toob_boot_diag_t` Struktur. Diese enthält u.A. den 
 *        kryptographischen SHA-256 Digest der SBOM, was direkt der Erfüllung
 *        des EU Cyber Resilience Acts 2027 (CRA) dient. Die weiterführende 
 *        Telemetrie zur Hardware-Lebensdauer ist optional via CBOR verpackt.
 *
 * @param diag Zeiger auf die vom OS bereitgestellte Struct-Instanz.
 * @return TOOB_OK bei Erfolg, TOOB_ERR_VERIFY bei gebrochener Checksumme.
 */
TOOB_MUST_CHECK toob_status_t toob_get_boot_diag(toob_boot_diag_t* diag);
/**
 * @brief Extrahiert die Diagnosedaten kodiert im Cloud-tauglichen CBOR-Format.
 * @param out_buf Buffer für den CBOR-Stream
 * @param max_len Maximale Größe von out_buf
 * @param out_len Tatsächliche Größe des geschriebenen CBOR-Streams
 * @return TOOB_OK bei Erfolg
 */
TOOB_MUST_CHECK toob_status_t toob_get_boot_diag_cbor(uint8_t* out_buf, size_t max_len, size_t* out_len);
/* ==============================================================================
 * Cloud-Command Submission API (Phase 7)
 * ==============================================================================
 * Das OS empfängt Cloud-Command Envelopes (CBOR, Ed25519-signiert) vom Server
 * und delegiert sie über dieses API an den Bootloader. Der Bootloader evaluiert
 * den Command beim nächsten Boot (Step 2.5 in boot_state.c).
 */

/**
 * @brief Schreibt ein Cloud-Command-Envelope in den CHIP_CLOUD_CMD_SLOT.
 *
 * Sequenz: Guard → Erase → Write → CRC Read-Back → Zeroize.
 * Der Bootloader evaluiert den Slot beim nächsten Boot autonom.
 *
 * @param envelope  Zeiger auf das rohe CBOR-Envelope (inkl. Signatur).
 * @param len       Länge des Envelopes in Bytes.
 * @return TOOB_OK bei Erfolg, TOOB_ERR_INVALID_ARG bei NULL/Überlänge,
 *         TOOB_ERR_FLASH bei Erase/Write-Fehler,
 *         TOOB_ERR_FLASH_HW bei Read-Back-Mismatch.
 */
TOOB_MUST_CHECK toob_status_t toob_submit_cloud_command(const uint8_t *envelope, uint32_t len);
/**
 * @brief Extrahiert die 32-Byte DICE Device-ID aus dem Boot-Handoff.
 *
 * @note  [Validating Accessor Reference Pattern]
 *        Diese Funktion dient als Referenz-Muster für den sicheren, gekapselten
 *        Zugriff auf spezifische Handoff-Felder. Sie holt sich den Handoff-State
 *        validiert über toob_get_handoff(), liest die ID aus und löscht den temporären
 *        Stack-Buffer anschließend sicher mittels toob_secure_zeroize().
 *
 * @param out_id  Ziel-Buffer (mind. 32 Bytes).
 * @param id_len  Größe des Buffers. Muss >= 32 sein.
 * @return TOOB_OK bei Erfolg, TOOB_ERR_INVALID_ARG bei NULL oder zu kleinem Buffer,
 *         TOOB_ERR_VERIFY bei korruptem Handoff.
 */
TOOB_MUST_CHECK toob_status_t toob_get_device_id(uint8_t *out_id, size_t id_len);